--- a/app/src/main/res/layout/layout_routes.xml
+++ b/app/src/main/res/layout/layout_routes.xml
@@ -16,22 +16,22 @@
 
             <TextView
                 android:id="@+id/textViewStart"
-                android:layout_width="76dp"
-                android:layout_height="wrap_content"
+                android:layout_width="148dp"
+                android:layout_height="50dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:text="start"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="#000000" />
 
             <TextView
                 android:id="@+id/textViewEnd"
-                android:layout_width="66dp"
-                android:layout_height="wrap_content"
+                android:layout_width="162dp"
+                android:layout_height="49dp"
                 android:layout_below="@id/textViewStart"
-                android:layout_marginLeft="137dp"
-                android:layout_marginTop="-21dp"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="-50dp"
                 android:text="End"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
 
